--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jquery": "^3.5.1",
     "jquery-modal": "^0.9.2",
     "jquery-validation": "^1.19.3",
+    "jquery.cookie": "^1.4.1",
     "reset-css": "^5.0.1",
     "three": "^0.125.2",
     "vanta": "^0.5.21"
